Legkisebb összegű számsorok golyó képek

--- a/legkisebb_osszegu_szamsorok.html
+++ b/legkisebb_osszegu_szamsorok.html
@@ -27,24 +27,24 @@
         <!--Menüszalag vége-->
         <div class="tartalom">
             <h1>A 3 legkisebb összegű <br> számsorok</h1>
-            <h1 class="alcim1">Összeg:</h1>
-                <img class="golyo" src="Golyo/piros-golyo.png" alt="golyo">
-                <img class="golyo" src="Golyo/nsárga-golyo.png" alt="golyo">
-                <img class="golyo" src="Golyo/zöld-golyo.png" alt="golyo">
-                <img class="golyo" src="Golyo/kék-golyo.png" alt="golyo">
-                <img class="golyo" src="Golyo/lila-golyo.png" alt="golyo">
-            <h1 id="terkoz" class="alcim1">Összeg:</h1>
-                <img class="golyo" src="Golyo/piros-golyo.png" alt="golyo">
-                <img class="golyo" src="Golyo/nsárga-golyo.png" alt="golyo">
-                <img class="golyo" src="Golyo/zöld-golyo.png" alt="golyo">
-                <img class="golyo" src="Golyo/kék-golyo.png" alt="golyo">
-                <img class="golyo" src="Golyo/lila-golyo.png" alt="golyo">
-            <h1 id="terkoz" class="alcim1">Összeg:</h1>
-                <img class="golyo" src="Golyo/piros-golyo.png" alt="golyo">
-                <img class="golyo" src="Golyo/nsárga-golyo.png" alt="golyo">
-                <img class="golyo" src="Golyo/zöld-golyo.png" alt="golyo">
-                <img class="golyo" src="Golyo/kék-golyo.png" alt="golyo">
-                <img class="golyo" src="Golyo/lila-golyo.png" alt="golyo">
+            <h1 class="alcim1">Összeg:49</h1>
+                <img class="golyo" src="/Golyo/indexgolyok/legkisebb összegű számsorok/1/legkisebb osszegu 1piros-golyo.png" alt="golyo">
+                <img class="golyo" src="/Golyo/indexgolyok/legkisebb összegű számsorok/1/legkisebb osszeg 1nsárga-golyo.png" alt="golyo">
+                <img class="golyo" src="/Golyo/indexgolyok/legkisebb összegű számsorok/1/legkisebb osszegu 1zöld-golyo.png" alt="golyo">
+                <img class="golyo" src="/Golyo/indexgolyok/legkisebb összegű számsorok/1/legkisebb osszegu 1kék-golyo.png" alt="golyo">
+                <img class="golyo" src="/Golyo/indexgolyok/legkisebb összegű számsorok/1/egkisebb osszegu 1lila-golyo.png" alt="golyo">
+            <h1 id="terkoz" class="alcim1">Összeg:66</h1>
+                <img class="golyo" src="/Golyo/indexgolyok/legkisebb összegű számsorok/2/legkisebb osszegu 2piros-golyo.png" alt="golyo">
+                <img class="golyo" src="/Golyo/indexgolyok/legkisebb összegű számsorok/2/legkisebb osszegu 2nsárga-golyo.png" alt="golyo">
+                <img class="golyo" src="/Golyo/indexgolyok/legkisebb összegű számsorok/2/legkisebb osszegu 2zöld-golyo.png" alt="golyo">
+                <img class="golyo" src="/Golyo/indexgolyok/legkisebb összegű számsorok/2/legkisebb osszegu 2kék-golyo.png" alt="golyo">
+                <img class="golyo" src="/Golyo/indexgolyok/legkisebb összegű számsorok/2/legkisebb osszegu 2lila-golyo.png" alt="golyo">
+            <h1 id="terkoz" class="alcim1">Összeg:67</h1>
+                <img class="golyo" src="/Golyo/indexgolyok/legkisebb összegű számsorok/3/legkisebb osszegu 3piros-golyo.png" alt="golyo">
+                <img class="golyo" src="/Golyo/indexgolyok/legkisebb összegű számsorok/3/legkisebb osszegu 3nsárga-golyo.png" alt="golyo">
+                <img class="golyo" src="/Golyo/indexgolyok/legkisebb összegű számsorok/3/legkisebb osszegu 3zöld-golyo.png" alt="golyo">
+                <img class="golyo" src="/Golyo/indexgolyok/legkisebb összegű számsorok/3/legkisebb osszegu 3kék-golyo.png" alt="golyo">
+                <img class="golyo" src="/Golyo/indexgolyok/legkisebb összegű számsorok/3/legkisebb osszegu 3lila-golyo.png" alt="golyo">
         </div>
     </div>
 </body>
